<?xml version="1.0"?>
<package>
  <name>PF_autonomous_navigation</name>
  <version>0.0.1</version>
  <description>
     PF_autonomous_navigation package for UWSim/pipefollowing examples.
  </description>

  <author email="emanuele.sansebastiano@outlook.com">Emanuele Sansebastiano</author>
  <maintainer email="emanuele.sansebastiano@outlook.com">Emanuele Sansebastiano</maintainer>

  <license>TODO</license>
  <url> </url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_srvs</build_depend>
  <build_depend>pipefollowing</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>topic_tools</run_depend>

</package>
